新增 404 页面 notfound.html，更新 application.yaml 配置 Redis 和视图前缀

--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -7,3 +7,11 @@ spring:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     # ShardingSphere 配置文件路径
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  mvc:
+    view:
+      prefix: /templates/
+      suffix: .html
