新增 MyBatis-Plus 配置，包含逻辑删除字段及相关值设置

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -11,3 +11,10 @@ spring:
     redis:
       host: 127.0.0.1
       port: 6379
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: delFlag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      id-type: auto
