新增短链接地区访问统计功能，包含省市信息及访问量记录

--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -22,3 +22,9 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+
+
+short-link:
+  stats:
+    locale:
+      amap-key: 244eeb5aaed8ee933cb81c760aa7938f
