--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -22,6 +22,9 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 short-link:
