--- a/shortlink-aggregation/src/main/resources/application.yaml
+++ b/shortlink-aggregation/src/main/resources/application.yaml
@@ -1,13 +1,11 @@
 server:
-  port: 8001
+  port: 8003
 
 spring:
   application:
-    name: short-link-project
+    name: short-link-aggregation
   datasource:
-    # ShardingSphere 对 Driver 自定义，实现分库分表等隐藏逻辑
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
-    # ShardingSphere 配置文件路径
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
   data:
     redis:
@@ -21,19 +19,17 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-mybatis-plus:
-  global-config:
-    db-config:
-      logic-delete-field: delFlag
-      logic-delete-value: 1
-      logic-not-delete-value: 0
-      id-type: auto
-  mapper-locations: classpath:mapper/*.xml
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+aggregation:
+  remote-url: http://127.0.0.1:${server.port}
 
 short-link:
+  group:
+    max_num: 20
+  flow-limit:
+    enable: true
+    time-window: 1
+    max-access-count: 20
   domain:
     default: nurl.ink:8003
   stats:
@@ -48,3 +44,8 @@ short-link:
         - zhihu.com
         - juejin.cn
         - cnblogs.com
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath:mapper/*.xml
